# bitrl-rest-api

./: Dockerfile  README.md  api_config.py  bitrlapp.py  entrypoint.sh  main.py  pyproject.toml
api/: api_config.py  master_client_routes.py
api/gym_pybullet_drones_env/: quadrotor_sim_env.py  quadrotor_sim_env_api.py
api/gym_walk_env/: gym_walk.py  gym_walk_env_api.py  gym_walk_manager.py
api/gymnasium_envs/: gym_env_manager.py
api/gymnasium_envs/box2d/: lunar_lander_env_continuous_api.py  lunar_lander_env_discrete_api.py
api/gymnasium_envs/classic_control/: acrobot_env_api.py  cart_pole_env_api.py  mountain_car_env_api.py  pendulum_env_api.py
api/gymnasium_envs/classic_control/v/: acrobot_v_env_api.py
api/gymnasium_envs/toy_text/: black_jack_env_api.py  cliffwalking_env_api.py  frozenlake_env_api.py  taxi_env_api.py
api/torchboard_api/: routes.py
api/utils/: get_env_dynamics_request_model.py  get_env_dynamics_response_model.py  gym_env_manager.py  info_response_model.py  make_env_request_model.py  make_env_response_model.py  reset_request_model.py  time_step_response.py
api/utils/spaces/: actions.py  discrete_action.py
